Update 笔记第一天 .md

--- a/笔记第一天 .md
+++ b/笔记第一天 .md
@@ -8,3 +8,34 @@
 *  版权问题 
 
 * 效率问题（openjdk）
+
+
+# 下载android开发的sdk
+* 什么是sdk
+ > strandard develop kits 标准开发工具集
+
+# sdk文件夹的目录结构
+* extras 额外工具
+  * Android support library 向下兼容提供的函数库
+  * usb driver 真实手机的驱动（只有谷歌的亲儿子才能用 nexus s）
+  * intel HAN intel的硬件加速器（只有是intel的处理器，amd的不可用）
+ 
+* 模拟器想要在电脑上运行需要有系统的镜像
+  * arm system image（在电脑模拟运行比较慢）
+  * x86 system image（在电脑模拟运行比较快）
+ 
+* doc 离线文档（包含全部api的离线说明）
+
+* platforms 不同版本sdk的开发android.jar包
+
+* platform-tools 平台工具
+  * adb.exe Android debug bridge (Android 开发调试桥)
+  * dx.bat 把.class的字节码转化成.dex的字节码
+  
+* simples 开发用的示例代码
+
+* sources sdk的全套源码
+
+* system—image 系统镜像
+
+* tools 模拟器应用程序就存放在这个文件夹里面
