Update 笔记第一天 .md

--- a/笔记第一天 .md
+++ b/笔记第一天 .md
@@ -19,18 +19,18 @@
   * Android support library 向下兼容提供的函数库
   * usb driver 真实手机的驱动（只有谷歌的亲儿子才能用 nexus s）
   * intel HAN intel的硬件加速器（只有是intel的处理器，amd的不可用）
-  
- * 模拟器想要在电脑上运行需要有系统的镜像
-   * arm system image（在电脑模拟运行比较慢）
-   * x86 system image（在电脑模拟运行比较快）
+ 
+* 模拟器想要在电脑上运行需要有系统的镜像
+ * arm system image（在电脑模拟运行比较慢）
+ * x86 system image（在电脑模拟运行比较快）
 
 * doc 离线文档（包含全部api的离线说明）
 
 * platforms 不同版本sdk的开发android.jar包
 
 * platform-tools 平台工具
-  * adb.exe Android debug bridge (Android 开发调试桥)
-  * dx.bat 把.class的字节码转化成.dex的字节码
+ * adb.exe Android debug bridge (Android 开发调试桥)
+ * dx.bat 把.class的字节码转化成.dex的字节码
   
 * simples 开发用的示例代码
 
@@ -39,3 +39,40 @@
 * system—image 系统镜像
 
 * tools 模拟器应用程序就存放在这个文件夹里面
+
+
+##模拟器名称
+* 5554端口号 一个模拟器占用两个端口号
+
+
+##DDMS
+* daivik debug manager system
+
+##ADT
+>Android Developer Tools 安卓开发工具集（eclipse的插件）
+>会帮我们自动建立Android的工程结构，帮我们编译应用程序->apk->部署手机->运行
+
+##Android应用程序开发的步骤
+1. 创建工程，配置应用程序名称，包名，图标
+2. 编写应用程序ui界面，res->layout->main_activity.xml
+	>布局都是xml文件编写，支持图形化的拖拽
+
+3. 写java代码在java目录下，MainActivity,java]
+
+	  @Override
+	    protected void onCreate(Bundle savedInstanceState) {
+	        super.onCreate(savedInstanceState);
+			//设置应用显示程序
+	        setContentView(R.layout.activity_main);
+	    }
+
+4. 必须给关键的控件设置id，这个id会在R.java文件里生成一个应用
+5. 在java代码 findViewByid(R.id.xxxx);
+6. 设置控件的点击事件
+	
+		bt.setOnClickListener(new mybuttonlistener());
+
+7.打印吐司
+	
+	 System.out.println("hhhhhhh,我点击了。");
+     Toast.makeText(MainActivity.this,"hhhhhhh,我点击了。",Toast.LENGTH_LONG).show();
