Update 笔记第一天 .md

--- a/笔记第一天 .md
+++ b/笔记第一天 .md
@@ -54,25 +54,28 @@
 
 ## Android应用程序开发的步骤
 1. 创建工程，配置应用程序名称，包名，图标
+
 2. 编写应用程序ui界面，res->layout->main_activity.xml
 	>布局都是xml文件编写，支持图形化的拖拽
 
-3. 写java代码在java目录下，MainActivity,java]
+3. 写java代码在java目录下，MainActivity.java
 
-	  @Override
+		 @Override
 	    protected void onCreate(Bundle savedInstanceState) {
 	        super.onCreate(savedInstanceState);
-			//设置应用显示程序
+		//设置应用显示程序
 	        setContentView(R.layout.activity_main);
 	    }
 
 4. 必须给关键的控件设置id，这个id会在R.java文件里生成一个应用
+
 5. 在java代码 findViewByid(R.id.xxxx);
+
 6. 设置控件的点击事件
 	
 		bt.setOnClickListener(new mybuttonlistener());
 
 7. 打印吐司
-	
-	 System.out.println("hhhhhhh,我点击了。");
-     Toast.makeText(MainActivity.this,"hhhhhhh,我点击了。",Toast.LENGTH_LONG).show();
+
+      	System.out.println("hhhhhhh,我点击了。");
+      Toast.makeText(MainActivity.this,"hhhhhhh,我点击了。",Toast.LENGTH_LONG).show();
