Update 笔记第一天 .md

--- a/笔记第一天 .md
+++ b/笔记第一天 .md
@@ -79,3 +79,82 @@
 
       	System.out.println("hhhhhhh,我点击了。");
       	Toast.makeText(MainActivity.this,"hhhhhhh,我点击了。",Toast.LENGTH_LONG).show();
+
+
+## 应用程序编译安装的过程.
+一. 把所有的.java文件编译成.class文件 
+> jdk 的 javac.exe
+ 
+二. 把所有的.class字节码文件打包合成一个文件 classes.dex
+ 
+> sdk中的dx.bat文件 把.class -->.dex
+ 
+三. 根据资源的id,生成一个资源文件resources.ap_ 保存全部的资源文件的信息
+ 
+四. 把.dex文件 res目录下的资源文件 resources.ap_的引用 asset目录下的文件
+合成在一起打成一个apk的压缩包
+ 
+>使用的是 aapt.exe
+ 
+五. adb.exe 负责把生成好的apk文件上传安装到手机里面.
+> Android debug bridge 安卓调试桥,负责上传安装apk
+ 
+## 常见的adb命令
+* 安装一个应用程序
+> adb install xxx.apk
+ 
+* 卸载一个应用程序
+> adb uninstall com.itheima.clickme<包名>
+ 
+* 进入到手机终端里面
+> adb shell 
+> 进入手机终端之后就可以执行Linux命令 kill 杀死一个进程 ps 列出来进程 ls 列出来文件
+ 
+* 杀死adb的调试桥
+>adb kill-server
+>adb的调试桥不稳定,经常掉线,如果掉线了,执行adb kill-server把调试桥杀死
+ 
+* 启动adb的调试桥
+>adb start-server
+ 
+* 查看连接在电脑上的设备
+>adb devices
+>adb start-server这个方法比较笨,如果一次启动不成功,就不启动了.通常使用adb devices来代替adb start-server
+ 
+* 指定设备执行adb指令
+>adb -s emulator-5556 install xxx.apk
+ 
+ 
+## URI && URL
+* URL 统一资源定位符(网址,ftp,rtsp)
+> http://www.baidu.com
+> http://www.itheima.com
+ 
+* URI 统一资源标识符(范围更加广泛)
+> tel://110
+> content://
+ 
+ 
+## 权限模型的目的
+* 给用户一个提醒,让用户知道你安装的软件需要干什么操作.
+* 只有敏感操作才需要申请权限(钱,设备安全,隐私)
+* 避免潜在法律诉讼
+ 
+## 点击事件的四种写法
+* 内部类
+* 匿名内部类
+* 让activity实现onclickListener接口
+* 在布局xml文件里面绑定点击事件
+ 
+## 常见的布局
+* LinearLayout 线性布局
+> 线性布局的朝向 vertical|horizontal
+> 线性布局的权重 weight 和 0dip一起使用
+ 
+ 
+* RelativeLayout 相对布局 都是按照相对位置排列的
+ 
+ 
+* FrameLayout 帧布局
+> 布局层层叠加覆盖的
+> DIV 
