Update 笔记第二天 .md

--- a/笔记第二天 .md
+++ b/笔记第二天 .md
@@ -1,1 +1,176 @@
 
+## 其他布局
+* LinearLayout
+* RelativeLayout 
+* FrameLayout 
+* AbsoluteLayout (绝对布局, 文档说过时,应用场景机顶盒开发,定制的平板)  
+* TableLayout  表格布局 , 办公类的软件 OA 类软件
+
+## Android下的常见单位
+px: 像素 真实在屏幕上的大小
+dp: dip 屏幕宽高和像素的一个比例值 在大屏幕的手机上dp对应的像素多,在小屏幕手机上dp对应的像素就小,在hvga模拟器上 一个dip == 一个px
+
+
+## logcat
+>手机内部的一块内存,环形缓冲区
+>在实际开发的时候不推荐使用system.out() 打印日志,这种方法不容易查找日志的位置
+>推荐使用Log.v d i w e()这样的方法打印日志
+
+
+## 程序测试
+>好的应用程序不是写出来的,是测出来了
+
+根据是否知道应用程序的源代码
+* 黑盒测试 不知道程序的源代码,但是知道程序的功能,根据输入测试输出
+* 白盒测试 知道程序的源代码,写一写测试逻辑跑这个程序的代码
+
+根据测试的粒度(精细程度)
+* 方法测试 function test
+* 单元测试 unit test
+* 集成测试 intergration test 
+* 系统测试 system test
+
+根据测试的暴力程度
+* 压力测试 pressure test 单位时间内的频繁测试
+* 冒烟测试 smoke test    长时间的重复测试
+> monkey 1000
+
+android下开发的代码写junit测试用例和普通pc机下的java代码不一样
+>要把应用程序部署到模拟器或者真实的手机去运行.
+
+
+## Android下junit测试代码的写法
+1. 写一个业务方法
+2. 测试这个业务方法,写一个类继承AndroidTestCase
+3. 编写测试的代码 
+		assertEquals(期待的结果,真实的结果)
+4. 配置androidmenifest.xml 清单文件
+		在mefifest节点里面
+		<!-- 指定测试框架运行的指令集,告诉模拟器测试我们的应用程序,指定包名 -->
+    	<instrumentation android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="com.itheima.junit"
+        ></instrumentation>
+5. 在application节点里面配置
+		      <!-- 引入测试框架的jar包 -->
+        <uses-library android:name="android.test.runner"/>
+
+6. 运行测试代码,对着方法名点击右键,run as android junit test
+7. 根据红条还是绿条判断测试结果
+
+
+## 输入输出
+>从文件里面读取数据
+>把数据写到文件
+
+
+## 输入输出的应用场景
+>qq登陆保存用户名和密码
+>注意: android下应用程序的路径和javase不同,应用程序的数据要保存自己的文件夹里面
+>			
+>			getFileDir(); 获取自己的文件夹 /data/data/包名/files
+>			getCacheDir();               /data/data/包名/cache
+
+谷歌给我们提供了两种应用程序的目录,files目录存放重要的应用程序数据.手机不会自动清理files目录的文件
+
+cache目录是存放临时的不重要的数据.这个目录有特定,当手机内存空间不足的时候会自动清理cache目录的文件
+
+## 手机存储空间的划分
+* 手机内部存储 Environment.getDataDirectory()
+> file目录 cache目录
+> 容量有限,较小,价格比较贵,存储访问速度快
+> 创建的文件在手机内部存储空间,**默认**的权限全部都是私有的.
+> 只有自己的应用程序可以访问,
+> 别的应用程序不可以访问.
+> 为什么不需要声明权限?
+
+
+* 手机外部存储 Environment.getExternalStorageDirectory()
+> sd卡
+> 容量大,可以更换,价格便宜,32G 不到200块
+> 读写声明权限
+
+
+### 如果想创建别的权限的文件
+openFileOutput("文件名", "访问模式");
+MODE_WORLD_READABLE  全局可读,别的应用程序可以读这个文件
+MODE_WORLD_WRITEABLE 全局可写,别的应用程序可以写这个文件
+MODE_WORLD_READABLE+MODE_WORLD_WRITEABLE 全局可读可写,别的应用程序可以自由的访问这个文件
+
+chmod : change mode 修改模式
+> chmod 777
+![](tu2.png)
+
+## Context 是什么
+> 上下文 : 程序运行的一个依赖的环境. 必须有这个环境,才可以方便的执行代码.
+> 应用程序运行的全局的环境.帮助类.
+
+## 共享参数 SharedPerference
+1. 声明sp
+		private SharedPreferences sp;
+2. 初始化sp
+		sp = this.getSharedPreferences("config", MODE_PRIVATE);
+3. 使用sp
+		Editor editor = sp.edit();
+		editor.putString("qq", qq);
+		editor.putString("password", password);
+		//一定不要忘记 提交数据
+		editor.commit();//提交数据. 类似关闭流,事务
+4. 读取sp
+		sp.getString("qq", "");
+
+
+
+## xml的生成
+1. 采用组拼字符串生成xml文件.
+>组拼字符串 StringBuilder, StringBuffer 注意特殊字符的转义
+2. 利用android序列化(生成)xml文件的api
+
+		1. XmlSerializer serializer = Xml.newSerializer();
+		2. serializer.setOutput("输出流", "文件编码");
+		3. 写文件的头
+			serializer.startDocument("utf-8", true);
+			serializer.endDocument();//写文件的末尾
+		4. 写节点
+			serializer.startTag(null, "info");
+			serializer.endTag(null, "info");
+		5. 写属性
+			serializer.attribute(null, "id", id);
+		6. 写节点里面的文本
+			serializer.text("文本");
+
+
+## xml的解析
+1. DOM解析 
+> 树状的xml结构
+
+2. Dom4j
+
+3. SAX 
+>基于事件解析,自上而下的解析
+
+4. Pull解析
+>类似sax解析,不过写起来更加的简单,容易理解,内存开销小,速度快
+
+## pull解析
+1. 声明一个解析器
+		XmlPullParser parser = Xml.newPullParser();
+2. 设置解析的数据
+		parser.setInput("哪个文件的输入流","文件编码");
+3. 获取解析器发现的事件的类型
+		parser.getEventType(); //第一个事件一定是文档的开头
+4. 不停的解析所有的节点
+		while(type!=XmlPullParser.END_DOCUMENT){
+			type = parser.next();//只要不解析到文档的末尾就不停的解析下一个节点
+		}
+5. 在解析过程中把我们关心的数据获取出来
+		parser.getName() //得到当前节点的名称
+		parser.nextText();  <foo>文本</foo> //取出两个节点之间的文本	
+		parser.getAttributeValue(namespace, 属性名称) 获取某个属性的值
+6. 得到数据,完成界面的展现
+
+## 断点调试应用程序
+1. 双击在代码的左边打一个断点
+2. 右键,debug as android application
+3. 右键 watch 查看数据  
+4. watch 一段代码
+5. 清空原来的调试断点
